--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/pm": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
     "@tiptap/vue-3": "^2.1.11",
+    "animejs": "^3.2.1",
     "baffle": "^0.3.6",
     "bootstrap": "^5.3.1",
     "jquery": "^3.7.1",
